== 0.9.3 / 2012-07-27

* Fix several serious bugs in caching/invalidation of materialized operator
  state (#276)
* Fix REBL regression with push-based runtime (#274)
* Minor performance optimizations
* Built-in support for code coverage with MRI 1.9 and SimpleCov

== 0.9.2 / 2012-05-19

* Add new aggregate functions: bool_and() and bool_or()
* Fix bugs in notin() stratification and implementation (#271)
* Fix a bug in processing multi-way joins defined inside modules
* Fix two bugs in reduce() operator
  * Incorrect default value was sometimes returned
  * Didn't handle reduce() outputs that aren't tuples with two fields
* Improve reduce() operator error reporting
* Improve MRI 1.9 compatibility

== 0.9.1 / 2012-04-10

* Reject attempts to insert a tuple into a collection with more fields than are
  in the collection's schema
  * Previous behavior was to ignore additional fields, but this was found to be
    error-prone
* Remove builtin support for BUST (web services API); this avoids the need to
  depend on the json, nestful and i18n gems

== 0.9.0 / 2012-03-21

* Major performance enhancements
  * Much, much faster: rewritten runtime that now uses a push-based dataflow
  * Operator state is cached; only deltas are updated across ticks in many cases
  * Joins that use collection keys can use collection storage for improved
    performance
* Improved compatibility: Bud now works with MRI 1.9 (as well as 1.8.7)
  * Switched from ParseTree to ruby_parser
  * Rewritten Bloom module system
* Tuples are now represented as Ruby Structs, rather than Arrays
  * This avoids the need to define column accessor methods by hand
* Tests now use MiniTest rather than Test::Unit
* Observe the following incompatibilities:
  * Support for "semi-structured" collections have been removed. That is,
    previously you could store extra field values into a tuple; those values
    would be collapsed into a single array that was tacked onto the end of the
    tuple.